# aiodynamo

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: publish.yml  pull-request.yaml
src/aiodynamo/: client.py  credentials.py  errors.py  expressions.py  models.py  operations.py  sign.py  types.py  utils.py
src/aiodynamo/http/: httpx.py  types.py
tests/: conftest.py
tests/integration/: conftest.py  test_client.py
tests/unit/: test_client.py  test_credentials.py  test_errors.py  test_expressions.py  test_utils.py
