[project]
name = "bioscope-aiodynamo"
version = "24.7"
description = "Asyncio DynamoDB client"
authors = [
    { name = "Jonas Obrist", email = "jonas.obrist@hennge.com" },
    { name = "Bioscope", email = "development@bioscope.ai" },
]
license = { text = "Apache-2.0" }
readme = "readme.md"
requires-python = ">=3.13"
keywords = ["dynamodb", "asyncio", "aws"]
classifiers = [
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "yarl>=1.4.2",
]

[project.urls]
Homepage = "https://github.com/bioscope-ai/aiodynamo"
Repository = "https://github.com/bioscope-ai/aiodynamo"

[project.optional-dependencies]
httpx = ["httpx>=0.15.0,<1.0.0"]
aiohttp = ["aiohttp>=3.6.2"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "boto3>=1.12.18",
    "freezegun>=1.0",
    "furo>=2023.9.10",
    "httpx>=0.15.0,<1.0.0",
    "aiohttp>=3.6.2",
    "pyfakefs>=5.3.0",
    "pyperf>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.0",
    "sphinx>=7",
    "types-freezegun>=1.1.6",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aiodynamo"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501", # Line too long
    "E722", # Do not use bare `except`
    "UP046", # Generic class uses `Generic` subclass instead of type parameters
    "UP047", # Generic function should use type parameters
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["aiodynamo"]
